bindings/c/include/xtreme3d.h

/* firefx.pas */
__declspec(dllimport) double FireFXManagerCreate(void);
__declspec(dllimport) double FireFXCreate(double, double);
__declspec(dllimport) double FireFXSetColor(double, double, double, double, double);
__declspec(dllimport) double FireFXSetMaxParticles(double, double);
__declspec(dllimport) double FireFXSetParticleSize(double, double);
__declspec(dllimport) double FireFXSetDensity(double, double);
__declspec(dllimport) double FireFXSetEvaporation(double, double);
__declspec(dllimport) double FireFXSetCrown(double, double);
__declspec(dllimport) double FireFXSetLife(double, double);
__declspec(dllimport) double FireFXSetBurst(double, double);
__declspec(dllimport) double FireFXSetRadius(double, double);
__declspec(dllimport) double FireFXExplosion(double, double, double, double);
__declspec(dllimport) double FireFXRingExplosion(double, double, double, double, double, double, double, double, double, double);
/* fonttext.pas */
__declspec(dllimport) double BmpfontCreate(double, double, double, double, double, double, double, double);
__declspec(dllimport) double BmpfontLoad(double, char*);
__declspec(dllimport) double WindowsBitmapfontCreate(char*, double, double, double);
__declspec(dllimport) double HUDTextCreate(double, char*, double);
__declspec(dllimport) double HUDTextSetRotation(double, double);
__declspec(dllimport) double HUDTextSetFont(double, double);
__declspec(dllimport) double HUDTextSetColor(double, double, double);
__declspec(dllimport) double HUDTextSetText(double, char*);
__declspec(dllimport) double FlatTextCreate(double, char*, double);
__declspec(dllimport) double FlatTextSetFont(double, double);
__declspec(dllimport) double FlatTextSetColor(double, double, double);
__declspec(dllimport) double FlatTextSetText(double, char*);
__declspec(dllimport) double SpaceTextCreate(double, char*, double, double);
__declspec(dllimport) double SpaceTextSetExtrusion(double, double);
__declspec(dllimport) double SpaceTextSetFont(double, double);
__declspec(dllimport) double SpaceTextSetText(double, char*);
__declspec(dllimport) double TTFontCreate(char*, double);
__declspec(dllimport) double TTFontSetLineGap(double, double);
/* fps.pas */
__declspec(dllimport) double FpsManagerCreate(void);
__declspec(dllimport) double FpsManagerSetNavigator(double, double);
__declspec(dllimport) double FpsManagerSetMovementScale(double, double);
__declspec(dllimport) double FpsManagerAddMap(double, double);
__declspec(dllimport) double FpsManagerRemoveMap(double, double);
__declspec(dllimport) double FpsManagerMapSetCollisionGroup(double, double, double);
__declspec(dllimport) double FpsSetManager(double, double);
__declspec(dllimport) double FpsSetCollisionGroup(double, double);
__declspec(dllimport) double FpsSetSphereRadius(double, double);
__declspec(dllimport) double FpsSetGravity(double, double);
__declspec(dllimport) double FpsMove(double, double);
__declspec(dllimport) double FpsStrafe(double, double);
__declspec(dllimport) double FpsLift(double, double);
__declspec(dllimport) double FpsGetVelocity(double, double);
/* freeform.pas */
__declspec(dllimport) double FreeformCreate(char*, double, double, double);
__declspec(dllimport) double FreeformGenTangents(double);
__declspec(dllimport) double FreeformMeshObjectsCount(double);
__declspec(dllimport) double FreeformMeshSetVisible(double, double, double);
__declspec(dllimport) double FreeformMeshSetSecondCoords(double, double, double, double);
__declspec(dllimport) double FreeformMeshTriangleCount(double, double);
__declspec(dllimport) char* FreeformMeshObjectGetName(double, double);
__declspec(dllimport) double FreeformMeshObjectSetName(double, double, char*);
__declspec(dllimport) double FreeformMeshObjectDestroy(double, double);