bindings/python3/xtreme3d/x3dfuncs.py


# firefx.pas
x3d.FireFXManagerCreate.argtypes = []
x3d.FireFXManagerCreate.restype = ctypes.c_double
def FireFXManagerCreate():
    return x3d.FireFXManagerCreate()

x3d.FireFXCreate.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.FireFXCreate.restype = ctypes.c_double
def FireFXCreate(aMngr, aObj):
    return x3d.FireFXCreate(aMngr, aObj)

x3d.FireFXSetColor.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.FireFXSetColor.restype = ctypes.c_double
def FireFXSetColor(aMngr, aIncolor, aInalpha, aOutcolor, aOutalpha):
    return x3d.FireFXSetColor(aMngr, aIncolor, aInalpha, aOutcolor, aOutalpha)

x3d.FireFXSetMaxParticles.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.FireFXSetMaxParticles.restype = ctypes.c_double
def FireFXSetMaxParticles(aMngr, aParticles):
    return x3d.FireFXSetMaxParticles(aMngr, aParticles)

x3d.FireFXSetParticleSize.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.FireFXSetParticleSize.restype = ctypes.c_double
def FireFXSetParticleSize(aMngr, aSize):
    return x3d.FireFXSetParticleSize(aMngr, aSize)

x3d.FireFXSetDensity.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.FireFXSetDensity.restype = ctypes.c_double
def FireFXSetDensity(aMngr, aDensity):
    return x3d.FireFXSetDensity(aMngr, aDensity)

x3d.FireFXSetEvaporation.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.FireFXSetEvaporation.restype = ctypes.c_double
def FireFXSetEvaporation(aMngr, aEvaporation):
    return x3d.FireFXSetEvaporation(aMngr, aEvaporation)

x3d.FireFXSetCrown.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.FireFXSetCrown.restype = ctypes.c_double
def FireFXSetCrown(aMngr, aCrown):
    return x3d.FireFXSetCrown(aMngr, aCrown)

x3d.FireFXSetLife.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.FireFXSetLife.restype = ctypes.c_double
def FireFXSetLife(aMngr, aLife):
    return x3d.FireFXSetLife(aMngr, aLife)

x3d.FireFXSetBurst.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.FireFXSetBurst.restype = ctypes.c_double
def FireFXSetBurst(aMngr, aBurst):
    return x3d.FireFXSetBurst(aMngr, aBurst)

x3d.FireFXSetRadius.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.FireFXSetRadius.restype = ctypes.c_double
def FireFXSetRadius(aMngr, aRadius):
    return x3d.FireFXSetRadius(aMngr, aRadius)

x3d.FireFXExplosion.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.FireFXExplosion.restype = ctypes.c_double
def FireFXExplosion(aMngr, aIsp, aMaxsp, aLbf):
    return x3d.FireFXExplosion(aMngr, aIsp, aMaxsp, aLbf)

x3d.FireFXRingExplosion.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.FireFXRingExplosion.restype = ctypes.c_double
def FireFXRingExplosion(aMngr, aIsp, aMaxsp, aLbf, aRx, aRy, aRz, aSx, aSy, aSz):
    return x3d.FireFXRingExplosion(aMngr, aIsp, aMaxsp, aLbf, aRx, aRy, aRz, aSx, aSy, aSz)


# fonttext.pas
x3d.BmpfontCreate.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.BmpfontCreate.restype = ctypes.c_double
def BmpfontCreate(aW, aH, aHspace, aVspace, aIntx, aInty, aChstart, aChend):
    return x3d.BmpfontCreate(aW, aH, aHspace, aVspace, aIntx, aInty, aChstart, aChend)

x3d.BmpfontLoad.argtypes = [ctypes.c_double, ctypes.c_char_p]
x3d.BmpfontLoad.restype = ctypes.c_double
def BmpfontLoad(aFont, aMtrl):
    return x3d.BmpfontLoad(aFont, aMtrl)

x3d.WindowsBitmapfontCreate.argtypes = [ctypes.c_char_p, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.WindowsBitmapfontCreate.restype = ctypes.c_double
def WindowsBitmapfontCreate(aNm, aSize, aChstart, aChend):
    return x3d.WindowsBitmapfontCreate(aNm, aSize, aChstart, aChend)

x3d.HUDTextCreate.argtypes = [ctypes.c_double, ctypes.c_char_p, ctypes.c_double]
x3d.HUDTextCreate.restype = ctypes.c_double
def HUDTextCreate(aFont, aTxt, aParent):
    return x3d.HUDTextCreate(aFont, aTxt, aParent)

x3d.HUDTextSetRotation.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.HUDTextSetRotation.restype = ctypes.c_double
def HUDTextSetRotation(aText, aAngle):
    return x3d.HUDTextSetRotation(aText, aAngle)

x3d.HUDTextSetFont.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.HUDTextSetFont.restype = ctypes.c_double
def HUDTextSetFont(aText, aFont):
    return x3d.HUDTextSetFont(aText, aFont)

x3d.HUDTextSetColor.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.HUDTextSetColor.restype = ctypes.c_double
def HUDTextSetColor(aText, aColor, aAlph):
    return x3d.HUDTextSetColor(aText, aColor, aAlph)

x3d.HUDTextSetText.argtypes = [ctypes.c_double, ctypes.c_char_p]
x3d.HUDTextSetText.restype = ctypes.c_double
def HUDTextSetText(aText, aTxt):
    return x3d.HUDTextSetText(aText, aTxt)

x3d.FlatTextCreate.argtypes = [ctypes.c_double, ctypes.c_char_p, ctypes.c_double]
x3d.FlatTextCreate.restype = ctypes.c_double
def FlatTextCreate(aFont, aTxt, aParent):
    return x3d.FlatTextCreate(aFont, aTxt, aParent)

x3d.FlatTextSetFont.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.FlatTextSetFont.restype = ctypes.c_double
def FlatTextSetFont(aText, aFont):
    return x3d.FlatTextSetFont(aText, aFont)

x3d.FlatTextSetColor.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.FlatTextSetColor.restype = ctypes.c_double
def FlatTextSetColor(aText, aColor, aAlph):
    return x3d.FlatTextSetColor(aText, aColor, aAlph)

x3d.FlatTextSetText.argtypes = [ctypes.c_double, ctypes.c_char_p]
x3d.FlatTextSetText.restype = ctypes.c_double
def FlatTextSetText(aText, aTxt):
    return x3d.FlatTextSetText(aText, aTxt)

x3d.SpaceTextCreate.argtypes = [ctypes.c_double, ctypes.c_char_p, ctypes.c_double, ctypes.c_double]
x3d.SpaceTextCreate.restype = ctypes.c_double
def SpaceTextCreate(aFont, aTxt, aExtr, aParent):
    return x3d.SpaceTextCreate(aFont, aTxt, aExtr, aParent)

x3d.SpaceTextSetExtrusion.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.SpaceTextSetExtrusion.restype = ctypes.c_double
def SpaceTextSetExtrusion(aText, aExtr):
    return x3d.SpaceTextSetExtrusion(aText, aExtr)

x3d.SpaceTextSetFont.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.SpaceTextSetFont.restype = ctypes.c_double
def SpaceTextSetFont(aText, aFont):
    return x3d.SpaceTextSetFont(aText, aFont)

x3d.SpaceTextSetText.argtypes = [ctypes.c_double, ctypes.c_char_p]
x3d.SpaceTextSetText.restype = ctypes.c_double
def SpaceTextSetText(aText, aTxt):
    return x3d.SpaceTextSetText(aText, aTxt)

x3d.TTFontCreate.argtypes = [ctypes.c_char_p, ctypes.c_double]
x3d.TTFontCreate.restype = ctypes.c_double
def TTFontCreate(aFilename, aHeight):
    return x3d.TTFontCreate(aFilename, aHeight)

x3d.TTFontSetLineGap.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.TTFontSetLineGap.restype = ctypes.c_double
def TTFontSetLineGap(aFont, aGap):
    return x3d.TTFontSetLineGap(aFont, aGap)


# fps.pas
x3d.FpsManagerCreate.argtypes = []
x3d.FpsManagerCreate.restype = ctypes.c_double
def FpsManagerCreate():
    return x3d.FpsManagerCreate()

x3d.FpsManagerSetNavigator.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.FpsManagerSetNavigator.restype = ctypes.c_double
def FpsManagerSetNavigator(aMan, aNav):
    return x3d.FpsManagerSetNavigator(aMan, aNav)

x3d.FpsManagerSetMovementScale.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.FpsManagerSetMovementScale.restype = ctypes.c_double
def FpsManagerSetMovementScale(aMan, aScale):
    return x3d.FpsManagerSetMovementScale(aMan, aScale)

x3d.FpsManagerAddMap.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.FpsManagerAddMap.restype = ctypes.c_double
def FpsManagerAddMap(aMan, aFfm):
    return x3d.FpsManagerAddMap(aMan, aFfm)

x3d.FpsManagerRemoveMap.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.FpsManagerRemoveMap.restype = ctypes.c_double
def FpsManagerRemoveMap(aMan, aFfm):
    return x3d.FpsManagerRemoveMap(aMan, aFfm)

x3d.FpsManagerMapSetCollisionGroup.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.FpsManagerMapSetCollisionGroup.restype = ctypes.c_double
def FpsManagerMapSetCollisionGroup(aMan, aFfm, aGroup):
    return x3d.FpsManagerMapSetCollisionGroup(aMan, aFfm, aGroup)

x3d.FpsSetManager.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.FpsSetManager.restype = ctypes.c_double
def FpsSetManager(aObj, aMan):
    return x3d.FpsSetManager(aObj, aMan)

x3d.FpsSetCollisionGroup.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.FpsSetCollisionGroup.restype = ctypes.c_double
def FpsSetCollisionGroup(aObj, aGroup):
    return x3d.FpsSetCollisionGroup(aObj, aGroup)

x3d.FpsSetSphereRadius.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.FpsSetSphereRadius.restype = ctypes.c_double
def FpsSetSphereRadius(aObj, aRadius):
    return x3d.FpsSetSphereRadius(aObj, aRadius)

x3d.FpsSetGravity.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.FpsSetGravity.restype = ctypes.c_double
def FpsSetGravity(aObj, aMode):
    return x3d.FpsSetGravity(aObj, aMode)

x3d.FpsMove.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.FpsMove.restype = ctypes.c_double
def FpsMove(aObj, aSpd):
    return x3d.FpsMove(aObj, aSpd)

x3d.FpsStrafe.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.FpsStrafe.restype = ctypes.c_double
def FpsStrafe(aObj, aSpd):
    return x3d.FpsStrafe(aObj, aSpd)

x3d.FpsLift.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.FpsLift.restype = ctypes.c_double
def FpsLift(aObj, aSpd):
    return x3d.FpsLift(aObj, aSpd)

x3d.FpsGetVelocity.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.FpsGetVelocity.restype = ctypes.c_double
def FpsGetVelocity(aObj, aInd):
    return x3d.FpsGetVelocity(aObj, aInd)


# freeform.pas
x3d.FreeformCreate.argtypes = [ctypes.c_char_p, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.FreeformCreate.restype = ctypes.c_double
def FreeformCreate(aFname, aMatl1, aMatl2, aParent):
    return x3d.FreeformCreate(aFname, aMatl1, aMatl2, aParent)

x3d.FreeformGenTangents.argtypes = [ctypes.c_double]
x3d.FreeformGenTangents.restype = ctypes.c_double
def FreeformGenTangents(aFf):
    return x3d.FreeformGenTangents(aFf)

x3d.FreeformMeshObjectsCount.argtypes = [ctypes.c_double]
x3d.FreeformMeshObjectsCount.restype = ctypes.c_double
def FreeformMeshObjectsCount(aFf):
    return x3d.FreeformMeshObjectsCount(aFf)

x3d.FreeformMeshSetVisible.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.FreeformMeshSetVisible.restype = ctypes.c_double
def FreeformMeshSetVisible(aFf, aMesh, aMode):
    return x3d.FreeformMeshSetVisible(aFf, aMesh, aMode)

x3d.FreeformMeshSetSecondCoords.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.FreeformMeshSetSecondCoords.restype = ctypes.c_double
def FreeformMeshSetSecondCoords(aFf1, aMesh1, aFf2, aMesh2):
    return x3d.FreeformMeshSetSecondCoords(aFf1, aMesh1, aFf2, aMesh2)

x3d.FreeformMeshTriangleCount.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.FreeformMeshTriangleCount.restype = ctypes.c_double
def FreeformMeshTriangleCount(aFf, aMesh):
    return x3d.FreeformMeshTriangleCount(aFf, aMesh)

x3d.FreeformMeshObjectGetName.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.FreeformMeshObjectGetName.restype = ctypes.c_char_p
def FreeformMeshObjectGetName(aFf, aMesh):
    return x3d.FreeformMeshObjectGetName(aFf, aMesh)

x3d.FreeformMeshObjectSetName.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_char_p]
x3d.FreeformMeshObjectSetName.restype = ctypes.c_double
def FreeformMeshObjectSetName(aFf, aMesh, aName):
    return x3d.FreeformMeshObjectSetName(aFf, aMesh, aName)

x3d.FreeformMeshObjectDestroy.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.FreeformMeshObjectDestroy.restype = ctypes.c_double
def FreeformMeshObjectDestroy(aFf, aMesh):
    return x3d.FreeformMeshObjectDestroy(aFf, aMesh)
